# cv-basics

./: main.py  pyproject.toml
content/: operacje_morfologiczne.ipynb
utils/: func.py  image_array.py
